--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portafolio Luis Ángel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +15,15 @@
 
     <div class="container py-5">
 
-        <h2 class="text-center mt-5 mb-4">Mis Proyectos</h2>
+    <div id="perfil" class="text-center mb-5"></div>
+
+  
+    <h2 class="text-center mb-4">Mis Mejores Proyectos en GitHub</h2>
+    <div id="repos" class="row g-4 mb-5"></div>
+
+    <h2 class="text-center mt-5 mb-4">Proyectos Académicos</h2>
+
+    <div class="row g-4">
 
         <div class="row g-4">
 
