--- a/index.html
+++ b/index.html
@@ -95,6 +95,19 @@
 
         </div>
 
+        <div class="col-md-6 col-lg-4">
+                <div class="card h-100 shadow">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Disney Api</h5>
+                        <a href="./disney_api/" class="btn btn-secondary w-100">
+                            Ver Proyecto
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
         <h2 class="text-center mt-5 mb-4">Comunidad</h2>
         <div id="followers" class="d-flex justify-content-center gap-3 flex-wrap"></div>
 
